# PowerJournal

./: Cargo.toml  Dioxus.toml  README.md  build.rs  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/me/machineonamission/powerjournal/: MainActivity.kt
include/: path.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
qml/: Entries.qml  Entry.qml  main.qml
src/: database.rs  main.rs  models.rs  path.cpp  path.rs
src/cpp/: path.cpp
src/database/: init.sql  mod.rs
test/: widget_test.dart
ui/: app-window.slint
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
